# libSmeagol

./: .gitignore  .gitlab-ci.yml  .mypy.ini  .pycodestyle.ini  CMakeLists.txt  Package.cmake  README.md  build.sh  build_for_ultimaker.sh  coverage.ini  make_docker.sh  pytest.ini  smeagol_requirements.txt
ci/: complexity_analysis.sh  dead_code_analysis.sh  mypy.sh  pytest.sh
docker_env/: Dockerfile
libSmeagol/: __init__.py  nonVolatilePocket.py  pocket.py  signal.py  timerPocket.py
libSmegol/: nonVolatilePocket.py  pocket.py  signal.py  timerPocket.py
tests/: TheOneTestToRuleThemAll.py  conftest.py  testNonVolatilePocket.py  testPocket.py  testRegistry.py
